# mosamatic3

./: .gitattributes  .gitignore  CELERY.md  DEV.md  README-DEVMANUAL.md  README.md  docker-compose.yml  dockerfile  entrypoint.sh  pyproject.toml
_/: cli.py  (+1 more)
chatgpt/sources_admin_page_v2/: docker-compose.yml  pyproject.toml
chatgpt/sources_admin_page_v2/app/: database.py  main.py
chatgpt/sources_admin_page_v2/src/: styles.css
chatgpt/sources_admin_page_v2/src/api/: auth.ts
chatgpt/sources_admin_page_v2/src/app/: layout.tsx  router.tsx
chatgpt/sources_admin_page_v2/src/app/pages/: homepage.tsx
mosamatic3/server/: .dockerignore  .env.example  docker-compose-dev.yml  docker-compose.yml  dockerfile  install-mosamatic3.bat  install-mosamatic3.sh  pyproject.toml  run-createarchive.ps1  run-createarchive.sh  run-createcommandlauncher.sh  run-createmaccommandlauncher.sh  run-dockerall.sh  run-dockerallfromdockerhub.ps1  run-dockerallfromdockerhub.sh  run-dockerdeploy2hub.ps1  run-dockerdeploy2hub.sh  run-mosamatic3.command  run-senddicomfolder.ps1  run-senddicomfolder.sh  run-server.ps1  run-server.sh  run-tests.ps1  run-tests.sh  run-zipcommandlauncherfiles.sh
mosamatic3/server/app/: auth.py  celeryapp.py  config.py  main.py  mainstartup.py  models.py  schemas.py  startup.py  tasks.py  utils.py
mosamatic3/server/app/config/: config.py
mosamatic3/server/app/data/: database.py  models.py  schemas.py
mosamatic3/server/app/processing/: app.py
mosamatic3/server/app/routers/: admin.py  auth.py  datasets.py  forms.py  health.py  tasks.py
mosamatic3/server/app/services/: adminservice.py  authservice.py  datasetservice.py  formservice.py  taskrunservice.py  taskservice.py
mosamatic3/server/app/tasks/: base.py  registry.py  runtime.py
mosamatic3/server/app/tasks/demo/: __init__.py  service.py
mosamatic3/server/app/tasks/rescaledicomimages/: __init__.py  celerytasks.py  schema.py  service.py
mosamatic3/server/app/tasks/sliceselect/: __init__.py  celerytasks.py  schema.py  service.py
mosamatic3/server/config/: celery_app.py  settings.py  urls.py
mosamatic3/server/core/: admin.py  models.py
mosamatic3/server/core/accounts/: apiurls.py  apiviews.py  urls.py  views.py
mosamatic3/server/core/adminpanel/: apiurls.py  urls.py  views.py
mosamatic3/server/core/common/: dicom.py  utils.py
mosamatic3/server/core/datasets/: apiurls.py  apiviews.py  serializers.py  services.py  system.py  urls.py  views.py
mosamatic3/server/core/dicomimport/: services.py  tasks.py  urls.py  views.py
mosamatic3/server/core/forms/: apiurls.py
mosamatic3/server/core/manualeditor/: apiurls.py  apiviews.py  services.py  urls.py  views.py
mosamatic3/server/core/migrations/: 0003_pipelinerun_pipelinesteprun.py  0004_alter_pipelinesteprun_input_dataset_and_more.py  0005_alter_pipelinerun_initial_dataset.py  0006_dataset_is_system.py  0007_dicomimportsession_dicomimportfile_and_more.py
mosamatic3/server/core/pipelines/: apiurls.py  apiviews.py  service.py  tasks.py  urls.py  views.py
mosamatic3/server/core/processing/: tasks.py
mosamatic3/server/core/tasking/: apiurls.py  registry.py  runtime.py  schemas.py  serializers.py  services.py  urls.py
mosamatic3/server/data/: app.db
mosamatic3/server/data/staticfiles/: styles.css
mosamatic3/server/docker/: entrypoint-web.sh  entrypoint-worker.sh
mosamatic3/server/scripts/: send_dicom_folder.py
mosamatic3/server/static/: styles.css
mosamatic3/server/static/manualeditor/: manual-editor.js
mosamatic3/server/templates/: base.html
mosamatic3/server/templates/accounts/: change_password.html  register.html
mosamatic3/server/templates/adminpanel/: admin_panel.html
mosamatic3/server/templates/datasets/: data.html  dataset_detail.html
mosamatic3/server/templates/dicomimport/: dicom_import_detail.html  dicom_imports.html
mosamatic3/server/templates/manualeditor/: manual_editor.html
mosamatic3/server/templates/pages/: home.html
mosamatic3/server/templates/partials/: dataset_table.html
mosamatic3/server/templates/pipelines/: pipeline_detail.html  pipelines.html
mosamatic3/server/templates/tasking/: task_parameters.html  tasks.html
mosamatic3/server/tests/: test_sliceselect_resume.py  test_tasks.py
mosamatic3/serveronly/: Dockerfile  create-archive.ps1  docker-compose-dev.yml  docker-compose.yml  docker-runbackendservices.ps1  pyproject.toml  pytest.ini  run-createarchive.ps1  run-createarchive.sh  run-dockerall.ps1  run-dockerallfromdockerhub.ps1  run-dockerallfromdockerhub.sh  run-dockerbackendservices.sh  run-dockerdeploy2hub.sh  run-dockerstop.sh  run-server.ps1  run-server.sh  run-uvinstall.sh  runserver.ps1
mosamatic3/serveronly/config/: celery_app.py  settings.py  urls.py
mosamatic3/serveronly/core/: api_views.py  models.py
mosamatic3/serveronly/core/accounts/: api_urls.py  api_views.py  views.py
mosamatic3/serveronly/core/adminpanel/: api_urls.py  apiviews.py
mosamatic3/serveronly/core/common/: api_views.py
mosamatic3/serveronly/core/datasets/: apiviews.py  serializers.py  services.py  views.py
mosamatic3/serveronly/core/migrations/: 0001_initial.py  0002_dataset_parameter_hash_dataset_source_dataset_and_more.py
mosamatic3/serveronly/core/pipelines/: apiurls.py  apiviews.py  configloader.py  resolver.py  service.py  tasks.py  urls.py  views.py
mosamatic3/serveronly/core/processing/: tasks.py
mosamatic3/serveronly/core/tasking/: api_urls.py  registry.py  schemas.py  services.py  taskrunservice.py  views.py
mosamatic3/serveronly/data/staticfiles/: styles.css
mosamatic3/serveronly/docker/: entrypoint-web.sh
mosamatic3/serveronly/nginx/: nginx.conf
mosamatic3/serveronly/templates/: base.html
mosamatic3/serveronly/templates/adminpanel/: admin_panel.html
mosamatic3/serveronly/templates/datasets/: data.html  dataset_detail.html
mosamatic3/serveronly/templates/pages/: home.html
mosamatic3/serveronly/templates/partials/: dataset_table.html
mosamatic3/serveronly/templates/pipelines/: pipelines.html
mosamatic3/serveronly/templates/tasking/: analysis.html  task_parameters.html
(+289 files in other folders)
