[project]
name = "mosamatic3"
version = "0.1.0"
description = "Command line tool for body composition analysis"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Brecheisen", email = "r.brecheisen@maastrichtuniversity.nl" }]

dependencies = [
    "pydicom>=3.0.1",
    "dicom2nifti>=2.6.2",
    "numpy>=1.26.4",
    "pandas>=2.3.2",
    "nibabel>=5.3.2",
    "openpyxl>=3.1.5",
    "pendulum>=3.1.0",
    "pillow>=11.3.0",
    "python-gdcm>=3.0.26",
    "scipy>=1.15.3",
    "torch==2.5.1",
    "torchvision>=0.20.1",
    "torchsummary",
    "tensorflow==2.15.*; platform_system == 'Linux'",
    "tensorflow-intel==2.15.0; platform_system == 'Windows'",
    "tensorflow-macos==2.15.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "tensorboard==2.15.2",
    "tensorboard-data-server==0.7.2",
    "tensorflow-io-gcs-filesystem==0.31.0; platform_system == 'Windows'",
    "tensorflow-io-gcs-filesystem>=0.31.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "totalsegmentator>=2.11.0",
    "simpleitk>=2.5.2", 
    "matplotlib",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
]

[project.scripts]
mosamatic3 = "mosamatic3.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
py-modules = ["models"]

[tool.setuptools.packages.find]
where = ["src"]