[project]
name = "mosamatic3-django"
version = "0.1.0"
description = "Django REST + server-rendered HTML migration of Mosamatic3"
requires-python = ">=3.11,<3.12"
dependencies = [
  "django>=5.1,<5.3",
  "djangorestframework>=3.15.0",
  "celery[redis]>=5.4.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.6.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt==4.0.1",
  "PyJWT>=2.9.0",
  "python-dotenv>=1.0.1",
  "pydicom>=3.0.1",
  "numpy>=1.26.4",
  "scipy>=1.15.3",
  "pillow>=11.3.0",
  "simpleitk>=2.5.2",
  "pytest>=8.0.0",
  "pytest-django>=4.9.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
