[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosamatic3-django"
version = "0.1.0"
description = "Django REST + server-rendered HTML migration of Mosamatic3"
requires-python = ">=3.11,<3.12"
dependencies = [

  # Django-specific packages
  "django>=5.1,<5.3",
  "djangorestframework>=3.15.0",
  "celery[redis]>=5.4.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.6.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt==4.0.1",
  "PyJWT>=2.9.0",
  "python-dotenv>=1.0.1",
  "gunicorn>=23.0.0",

  # Imaging-related packages
  "pydicom>=3.0.1",
  "dicom2nifti>=2.6.2",
  "numpy>=1.26.4",
  "pandas>=2.3.2",
  "nibabel>=5.3.2",
  "openpyxl>=3.1.5",
  "pendulum>=3.1.0",
  "pillow>=11.3.0",
  "python-gdcm>=3.0.26",
  "scipy>=1.15.3",
  "torch==2.5.1",
  "torchvision>=0.20.1",
  "torchsummary",
  "tensorflow==2.15.*; platform_system == 'Linux'",
  "tensorflow-intel==2.15.0; platform_system == 'Windows'",
  "tensorflow-macos==2.15.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "tensorboard==2.15.2",
  "tensorboard-data-server==0.7.2",
  "tensorflow-io-gcs-filesystem==0.31.0; platform_system == 'Windows'",
  "tensorflow-io-gcs-filesystem>=0.31.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "totalsegmentator>=2.11.0",
  "simpleitk>=2.5.2", 
  "matplotlib>=3.10.0",

  # Testing
  "pytest>=8.0.0",
  "pytest-django>=4.12.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "core*", "data*"]
exclude = ["static*", "templates*", "media*", "uploads*", "tests*"]
